Bugfix: No linebreaks in stripe display
Now long names does not kill the layout. To avoid scrollbars,
overflow:hidden is set to the table.

--- a/css/displaymode.css
+++ b/css/displaymode.css
@@ -655,9 +655,14 @@
 	font-size: 10vmin;
 	border-collapse: collapse;
 	table-layout: fixed;
+	overflow: hidden;
 }
 .d_stripes_table td {
 	text-align: center;
+}
+
+.d_stripes_table > tr:not(:nth-child(3)) td {
+	white-space: nowrap;
 }
 
 .d_hide_settings {
